--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,15 +2,11 @@ version: 0.2
 
 phases:
   install:
-    runtime-versions:
-      nodejs: 20  # Adjust to your Node.js version
     commands:
       - npm install
-
   build:
     commands:
-      - npm run build -- --prod  # Change this to your build command
-
+      - npm run build  # Builds the project
 artifacts:
   files:
-    - dist/**/*  # Adjust this path to your build output directory
+    - 'dist/frontend/browser/**/*'
