--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,6 +8,6 @@ phases:
     commands:
       - npm run build  # Builds the project
 artifacts:
+  base-directory: dist/frontend/browser
   files:
     - '**/*'
-  base-directory: dist/frontend  # Directory with output files (e.g., React app)
